--- a/index.html
+++ b/index.html
@@ -1,11 +1,205 @@
 <!DOCTYPE html>
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>Marketing Website</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/bootstrap.css">
+    <link rel="stylesheet" href="./css/my-style.css">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.js"
+        integrity="sha256-tA8y0XqiwnpwmOIl3SGAcFl2RvxHjA8qp0+1uCGmRmg=" crossorigin="anonymous"></script>
+    <script src="js/bootstrap.js"></script>
 </head>
+
 <body>
-    
+    <section id="section-one" class="bg-blue text-light">
+        <div class="container-fluid top-part-space">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-warning rounded-lg">
+                <a class="navbar-brand" href="#">E-Mail</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Conctact Us</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+            <div class="row top-bottom-space">
+                <div class="col-lg-6 col-md-6 col-sm-12">
+                    <h1 class="slogan">Do you want to send your product to millions, with just one click? See our
+                        new services and amazing
+                        plans. Contact us to learn more about our services. We are here to help you!</h1>
+                    <div class="download-links">
+                        <button type="button" class="btn btn-secondary btn-lg "><i
+                                class="fab fa-apple mr-2"></i>Download</button>
+                        <button type="button" class="btn btn-light btn-lg ml-3"><i
+                                class="fab fa-android mr-2"></i>Download</button>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12 justify-content-center">
+                    <img class="image" src="./Images/mobile.png" alt="mobile-img">
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <!-- SECTION 2 -->
+    <section id="adds">
+        <!-- container fluid -->
+        <div class="container-fluid r-l-padding">
+            <div class="row">
+                <div class="col-lg-3 col-md-6 col-sm-12">
+                    <i class="fas fa-rocket fa-4x"></i>
+                    <h2>Fast Connection</h2>
+                    <p>Connect wtih many people within 10 minutes</p>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-12">
+                    <i class="fas fa-dollar-sign fa-4x"></i>
+                    <h2>Great Price</h2>
+                    <p>Make your advertisement with low cost</p>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-12">
+                    <i class="fas fa-smile fa-4x"></i>
+                    <h2>Permanent Adds</h2>
+                    <p>Emails are becomming perminent in the customers</p>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-12">
+                    <i class="fas fa-comments fa-4x"></i>
+                    <h2>One on one Communication</h2>
+                    <p>You can connect with directly with the customers</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- SECTION 3 SLIDER -->
+    <section id="comments">
+        <div class="container-fluid bg-blue r-l-padding">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active text-light text-center comment">
+                        <p>I honestly wasn't expecting such a good quality service with this price. Custumer service was
+                            very helpful. I keep getting fast responses from the customers.</p>
+                        <img src="/Images/avatar.jpeg" class="rounded-circle" alt="avatar">
+                        John Lennon
+                    </div>
+                    <div class="carousel-item active text-light text-center comment">
+                        <p>I got different similar E-Mail marketing services, but non of them was fast and reliable than
+                            your service. I will be your permanent customer and I am very happy with your service!</p>
+                        <img src="..." class="rounded-circle" alt="avatar">
+                        Jean Connery
+                    </div>
+                    <div class="carousel-item active text-light text-center comment">
+                        <p>Very fast responsive customer service! I sent multiple mails within minutes. There were
+                            people who were responded mimediatelly. It is very very exciting and awesome system.</p>
+                        <img src="..." class="rounded-circle" alt="avatar">
+                        Jim Carrey
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
+    </section>
+    <!-- SECTION 4 -->
+    <section id="pricing">
+        <div class="container-fluid r-l-padding">
+            <div class="row">
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="card text-center">
+                        <div class="card-header">
+                            Monthly
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">$9.99</h5>
+                            <p class="card-text">1000 Mainl Daily <br>
+                                7/24 Communication <br>
+                                No technical support
+                            </p>
+                            <a href="#" class="btn btn-primary">BUY</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="card text-center">
+                        <div class="card-header">
+                            Yearly
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">$99.99</h5>
+                            <p class="card-text">1000 Mainl Daily <br>
+                                7/24 Communication <br>
+                                Yes technical support
+                            </p>
+                            <a href="#" class="btn btn-primary">BUY</a>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="card text-center">
+                        <div class="card-header">
+                            Lifelong
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">$499.99</h5>
+                            <p class="card-text">1000 Mainl Daily <br>
+                                7/24 Communication <br>
+                                Yes technical support
+                            </p>
+                            <a href="#" class="btn btn-primary">BUY</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+    <!-- SECTION 5 Footer -->
+    <section id="footer">
+        <div class="container-fluid bg-blue text-light">
+            <a href="">
+                <i class="fab fa-twitter"></i>
+            </a>
+            <a href="">
+                <i class="fab fa-facebook"></i>
+            </a>
+            <a href="">
+                <i class="fab fa-instagram"></i>
+            </a>
+            <a href="">
+                <i class="fab fa-linkedin"></i>
+            </a>
+            <span class="ml-3">All Rigths Reserved &copy
+                <script>
+                    document.write(new Date().getFullYear());
+                </script>
+            </span>                     
+            
+        </div>
+
+    </section>
+
+
 </body>
+
 </html>
